--- a/linkbook/links/templates/links/link.html
+++ b/linkbook/links/templates/links/link.html
@@ -26,21 +26,7 @@
                     <li class="collection-item avatar">
                       <div class="row">
                         <!-- user avatar -->
-                        {% if request.user.social_auth.get.provider == "facebook" %}
-                            <img class="responsive-img circle" src="https://graph.facebook.com/{{request.user.social_auth.get.uid}}/picture?type=square" />
-
-                        {% elif request.user.social_auth.get.provider == "google-oauth2" %}
-                            <script src="https://www.avatarapi.com/js.aspx?email={{request.user.social_auth.get.uid}}&size=40"></script>
-
-                        {% elif request.user.social_auth.get.provider == "github" %}
-                             <img class="responsive-img circle" src="https://avatars.githubusercontent.com/u/{{request.user.social_auth.get.uid}}" />
-
-                        {% elif request.user.social_auth.get.provider == "twitter" %}
-                             <img class="responsive-img circle" src="https://twitter.com/{{request.user.social_auth.get.access_token.screen_name}}/profile_image?size=normal" />
-
-                        {% else %}
-                             <img class="responsive-img circle" src="https://thebenclark.files.wordpress.com/2014/03/facebook-default-no-profile-pic.jpg" />
-                        {% endif %}
+                        <img class="responsive-img circle"  height = "40px" width="40px" src="{{link.user.profile.pic}}" />
                         &nbsp; &nbsp;
                         <span class="title blue-grey-text ">{{ link.user }} <sub>{{ link.date }}</sub></span> <br><span class="title blue-grey-text"><sup>&nbsp; &nbsp;&nbsp; Last updated : {{ link.last_updated }}</sup>  </span>
                       </div>
